Commit Produto Class

--- a/Quiron.LojaVirtual.Dominio/Quiron.LojaVirtual.Dominio.csproj
+++ b/Quiron.LojaVirtual.Dominio/Quiron.LojaVirtual.Dominio.csproj
@@ -69,11 +69,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Entidades\Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entidades\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
