Script da tabela de produtos

--- a/Quiron.LojaVirtual.Dominio/Quiron.LojaVirtual.Dominio.csproj
+++ b/Quiron.LojaVirtual.Dominio/Quiron.LojaVirtual.Dominio.csproj
@@ -72,7 +72,9 @@
     <Compile Include="Entidades\Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Script dos Produtos.sql" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
